--- a/src/app/home/tour-list/tour-list.component.html
+++ b/src/app/home/tour-list/tour-list.component.html
@@ -1,3 +1,20 @@
-<div *ngFor="let tour of tours">
-  {{tour}}
-</div>
+<table mat-table [dataSource]="tours">
+  <ng-container matColumnDef="name">
+    <th mat-header-cell *matHeaderCellDef> {{ 'tour.table.name' | translate}} </th>
+    <td mat-cell *matCellDef="let tour"> {{tour.name}} </td>
+  </ng-container>
+  <ng-container matColumnDef="desc">
+    <th mat-header-cell *matHeaderCellDef> {{ 'tour.table.description' | translate}} </th>
+    <td mat-cell *matCellDef="let tour"> {{tour.description}} </td>
+  </ng-container>
+  <ng-container matColumnDef="duration">
+    <th mat-header-cell *matHeaderCellDef> {{ 'tour.table.duration' | translate}} </th>
+    <td mat-cell *matCellDef="let tour"> {{tour.duration}} </td>
+  </ng-container>
+  <ng-container matColumnDef="stepCount">
+    <th mat-header-cell *matHeaderCellDef> {{ 'tour.table.steps' | translate}} </th>
+    <td mat-cell *matCellDef="let tour"> {{tour.stepCount}} </td>
+  </ng-container>
+  <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
+  <tr mat-row *matRowDef="let rowData; columns: columnsToDisplay"></tr>
+</table>
