intégration bootstrap création liste des circuits init modale de création d'un circuit

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,6 @@
-<mat-toolbar role="heading" color="primary">
-  <span>{{ 'home.title' | translate }}</span>
-</mat-toolbar>
-
-<router-outlet></router-outlet>
+<nav class="navbar navbar-dark bg-dark">
+  <span class="navbar-brand">{{ 'home.title' | translate }}</span>
+</nav>
+<div class="container-fluid mt-3">
+  <router-outlet></router-outlet>
+</div>
