--- a/src/app/home/tour/create-tour/create-tour.component.html
+++ b/src/app/home/tour/create-tour/create-tour.component.html
@@ -5,8 +5,24 @@
   </button>
 </div>
 <div class="modal-body">
-
+  <form [formGroup]="tourForm" autocomplete="off">
+    <div class="form-group">
+      <label for="name">{{ 'tour.create.name' | translate }}</label>
+      <input type="text" formControlName="name" class="form-control" id="name"
+             placeholder="{{ 'tour.create.name' | translate }}" autofocus>
+    </div>
+    <div class="form-group">
+      <label for="desc">{{ 'tour.create.desc' | translate }}</label>
+      <textarea formControlName="desc" class="form-control" id="desc"
+                placeholder="{{ 'tour.create.desc' | translate }}"></textarea>
+    </div>
+    <div class="form-group">
+      <label for="duration">{{ 'tour.create.duration' | translate }}</label>
+      <ngb-timepicker formControlName="duration" id="duration" class="d-flex justify-content-center"></ngb-timepicker>
+    </div>
+  </form>
 </div>
-<div class="modal-footer">
-  <button type="button" class="btn btn-outline-dark" (click)="activeModal.close()">Close</button>
+<div class="modal-footer d-flex justify-content-between">
+  <button type="button" class="btn btn-outline-dark" (click)="close()">{{ 'tour.create.close' | translate }}</button>
+  <button type="button" class="btn btn-secondary" (click)="submit()">{{ 'tour.create.submit' | translate }}</button>
 </div>
