--- a/src/app/home/tour/tour-detail/tour-detail.component.html
+++ b/src/app/home/tour/tour-detail/tour-detail.component.html
@@ -1,3 +1,46 @@
-<p>{{tour.name}}</p>
-<p>{{tour.description}}</p>
-<p>{{tour.duration}}</p>
+<div class="container-fluid">
+  <div class="d-flex justify-content-between mb-3">
+    <div class="d-flex justify-content-end">
+      <button type="button" class="btn btn-dark" routerLink="/tour">
+        <span class="fas fa-angle-left"></span>
+        {{ 'global.back' | translate }}
+      </button>
+    </div>
+    <div class="d-flex justify-content-start">
+      <h2>{{tour.name}}</h2>
+    </div>
+    <div class="d-flex justify-content-end">
+      <button type="button" class="btn btn-dark" (click)="openCreateStepModal()">
+        <span class="fas fa-plus mr-1"></span>
+        {{ 'step.add' | translate }}
+      </button>
+    </div>
+  </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-3 text-right">
+        <div class="font-weight-bold">{{ 'tour.table.name' | translate }}</div>
+      </div>
+      <div class="col-9">
+        {{tour.name}}
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-3 text-right">
+        <div class="font-weight-bold">{{ 'tour.table.description' | translate }}</div>
+      </div>
+      <div class="col-9">
+        {{tour.description}}
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-3 text-right">
+        <div class="font-weight-bold">{{ 'tour.table.duration' | translate }}</div>
+      </div>
+      <div class="col-9">
+        {{tour.duration}}
+      </div>
+    </div>
+  </div>
+  <app-step-list></app-step-list>
+</div>
