--- a/src/app/home/tour/tour-list/tour-list.component.html
+++ b/src/app/home/tour/tour-list/tour-list.component.html
@@ -1,36 +1,42 @@
-<div class="container d-flex justify-content-between">
-  <div>
-    <h2 class="display-5">{{ 'tour.title' | translate}}</h2>
+<div class="container-fluid">
+  <div class="d-flex justify-content-between">
+    <div class="d-flex justify-content-">
+      <h2>{{ 'tour.title' | translate}}</h2>
+    </div>
+    <div class="d-flex justify-content-end">
+      <button type="button" class="btn btn-dark" (click)="openCreateTourModal()">
+        <span class="fas fa-plus mr-1"></span>
+        {{ 'tour.add' | translate }}
+      </button>
+    </div>
   </div>
-  <div>
-    <button type="button" class="btn btn-dark" (click)="openCreateTourModal()">
-      <span class="fas fa-plus mr-1"></span>
-      {{ 'tour.add' | translate }}
-    </button>
-  </div>
-</div>
 
-<table class="table table-striped mt-4">
-  <thead>
-  <tr>
-    <th scope="col">{{ 'tour.table.name' | translate}}</th>
-    <th style="width: 50%" scope="col">{{ 'tour.table.description' | translate}}</th>
-    <th scope="col">{{ 'tour.table.duration' | translate}}</th>
-    <th scope="col">{{ 'tour.table.steps' | translate}}</th>
-    <th scope="col">{{ 'tour.table.actions' | translate}}</th>
-  </tr>
-  </thead>
-  <tbody>
-  <tr *ngFor="let tour of tours">
-    <td>{{ tour.name }}</td>
-    <td>{{ tour.description | slice:0:120 }}<span *ngIf="tour.description.length > 120">…</span></td>
-    <td>{{ tour.duration }}</td>
-    <td>{{ tour.stepCount | number }}</td>
-    <td class="d-flex justify-content-around">
-      <i class="far fa-edit pb-1" placement="bottom" ngbTooltip="{{ 'tour.table.tooltip.update'| translate }}"></i>
-      <i class="far fa-trash-alt pb-1" (click)="deleteTour(tour.id)" placement="bottom"
-         ngbTooltip="{{ 'tour.table.tooltip.delete'| translate }}"></i>
-    </td>
-  </tr>
-  </tbody>
-</table>
+  <table class="table table-striped mt-4">
+    <thead>
+    <tr>
+      <th scope="col">{{ 'tour.table.name' | translate}}</th>
+      <th style="width: 50%" scope="col">{{ 'tour.table.description' | translate}}</th>
+      <th scope="col">{{ 'tour.table.duration' | translate}}</th>
+      <th scope="col">{{ 'tour.table.steps' | translate}}</th>
+      <th scope="col">{{ 'global.actions' | translate}}</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr *ngFor="let tour of tours">
+      <td>{{ tour.name }}</td>
+      <td>{{ tour.description | slice:0:120 }}<span *ngIf="tour.description.length > 120">…</span></td>
+      <td>{{ tour.duration }}</td>
+      <td>{{ tour.stepCount | number }}</td>
+      <td class="d-flex justify-content-around">
+        <i class="far fa-edit pb-1" placement="bottom" ngbTooltip="{{ 'tour.table.tooltip.update'| translate }}"
+           routerLink="./{{tour.id}}"></i>
+        <i class="far fa-trash-alt pb-1" (click)="deleteTour(tour.id)" placement="bottom"
+           ngbTooltip="{{ 'tour.table.tooltip.delete'| translate }}"></i>
+      </td>
+    </tr>
+    <tr class="child">
+      <td *ngIf="toursEmpty()" colspan="5" class="font-italic">{{ 'tour.table.empty' | translate }}</td>
+    </tr>
+    </tbody>
+  </table>
+</div>
