--- a/src/app/home/tour/tour-detail/tour-detail.component.html
+++ b/src/app/home/tour/tour-detail/tour-detail.component.html
@@ -42,5 +42,5 @@
       </div>
     </div>
   </div>
-  <app-step-list></app-step-list>
+  <app-step-list [steps]="tour.steps" [tourId]="tour.id" ></app-step-list>
 </div>
