--- a/src/app/home/tour/tour-list/tour-list.component.html
+++ b/src/app/home/tour/tour-list/tour-list.component.html
@@ -26,7 +26,7 @@
       <td>{{ tour.name }}</td>
       <td>{{ tour.description | slice:0:120 }}<span *ngIf="tour.description.length > 120">…</span></td>
       <td>{{ tour.duration }}</td>
-      <td>{{ tour.stepCount | number }}</td>
+      <td>{{ tour.steps.length | number }}</td>
       <td class="d-flex justify-content-around">
         <i class="far fa-edit pb-1" placement="bottom" ngbTooltip="{{ 'tour.table.tooltip.update'| translate }}"
            routerLink="./{{tour.id}}"></i>
