--- a/src/app/home/tour/create-tour/create-tour.component.html
+++ b/src/app/home/tour/create-tour/create-tour.component.html
@@ -7,9 +7,11 @@
 <div class="modal-body">
   <form [formGroup]="tourForm" autocomplete="off">
     <div class="form-group">
-      <label for="name">{{ 'tour.create.name' | translate }}</label>
+      <label class="input-required" for="name">{{ 'tour.create.name' | translate }}</label>
       <input type="text" formControlName="name" class="form-control" id="name"
-             placeholder="{{ 'tour.create.name' | translate }}" autofocus required>
+             placeholder="{{ 'tour.create.name' | translate }}" autofocus
+             [ngClass]="{'input-invalid': controlIsInvalid('name')}">
+      <span class="error-label" *ngIf="controlHasError('name', 'required')">{{ 'tour.error.name.required' | translate }}</span>
     </div>
     <div class="form-group">
       <label for="description">{{ 'tour.create.desc' | translate }}</label>
@@ -17,12 +19,15 @@
                 placeholder="{{ 'tour.create.desc' | translate }}"></textarea>
     </div>
     <div class="form-group">
-      <label for="duration">{{ 'tour.create.duration' | translate }}</label>
-      <ngb-timepicker formControlName="duration" id="duration" class="d-flex justify-content-center" required></ngb-timepicker>
+      <label class="input-required" for="duration">{{ 'tour.create.duration' | translate }}</label>
+      <ngb-timepicker formControlName="duration" id="duration" class="d-flex justify-content-center" [spinners]="false"
+                      [ngClass]="{'child-input-invalid': controlIsInvalid('duration')}"></ngb-timepicker>
+      <span class="error-label" *ngIf="controlHasError('duration', 'required')">{{ 'tour.error.duration.required' | translate }}</span>
     </div>
   </form>
 </div>
 <div class="modal-footer d-flex justify-content-between">
   <button type="button" class="btn btn-outline-dark" (click)="close()">{{ 'global.close' | translate }}</button>
-  <button type="button" class="btn btn-secondary" (click)="submit()" [disabled]="tourForm.invalid">{{ 'global.submit' | translate }}</button>
+  <button type="button" class="btn btn-secondary" (click)="submit()"
+          [disabled]="tourForm.invalid">{{ 'global.submit' | translate }}</button>
 </div>
